# SpectCube

./: .gitignore  CHANGELOG.md  README.md  resampling.py  setup.cfg  test.py  util.py
paper/: aas_macros.sty  biblio.bib  doc.tex  introduction.tex  makefile  methods.tex
spectcube/: resampling.py  util.py
test/: comparison.py  fig_conf.mplstyle  runtime.py
