[metadata]
name = specube
version = 0.0.1
author = Luiz Albérico
author_email = luiz.sl@outlook.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luizsl/SpeCube
project_urls =
    Bug Tracker = https://github.com/luizsl/SpeCube/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
